<resources>
    <string name="login">Login</string>
    <string name="app_name">Todo App</string>
    <string name="first_page_main">Todo</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_date">Enter date</string>
    <string name="tasks">Tasks</string>
    <string name="back">Back</string>
    <string name="in_progress">In progress</string>
    <string name="finished">Finished</string>
    <string name="select_option">Select option</string>
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="new_string">New task</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New password</string>
</resources>