<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".fragments.TodoFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/inProgressBtn"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@color/grey"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/icons8_in_progress_100" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/newTaskBtn"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:background="@color/grey"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/icons8_new_100" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/doneBtn"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginTop="24dp"
        android:background="@color/grey"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/inProgressBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/icons8_checkmark_100" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_string"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/newTaskBtn"
        app:layout_constraintStart_toStartOf="@+id/newTaskBtn"
        app:layout_constraintTop_toBottomOf="@+id/newTaskBtn" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_progress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/inProgressBtn"
        app:layout_constraintStart_toStartOf="@+id/inProgressBtn"
        app:layout_constraintTop_toBottomOf="@+id/inProgressBtn" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/doneBtn"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/doneBtn"
        app:layout_constraintTop_toBottomOf="@+id/doneBtn"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/select_option"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_btn"
        android:drawableLeft="@drawable/icons8_user_24"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/tasksBtn"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginTop="48dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newTaskBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/icons8_to_do_96" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tasksBtn"
        app:layout_constraintStart_toStartOf="@+id/tasksBtn"
        app:layout_constraintTop_toBottomOf="@+id/tasksBtn" />

    <Button
        android:id="@+id/editProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_btn"
        android:drawableLeft="@drawable/icons8_user_24"
        android:text="@string/profile"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>