<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="edu.ktu.firstapp.viewModels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment"
        android:background="@color/white">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="122dp"
            android:layout_height="123dp"
            android:layout_marginTop="108dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons8_customer_64" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.167"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:authEmailError="@{viewModel.signInError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text_layout"
            app:authPasswordError="@{viewModel.signInError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="85dp"
            android:background="@drawable/off_white_btn"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/password_text_layout"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/password_text_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_text_layout" />

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="142dp"
            android:layout_height="32dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#1a20d9"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.881"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_layout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/LoginRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/register"
            android:textColor="#1a20d9"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            app:layout_constraintVertical_bias="0.586" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>